--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </a></td>
             <td width="16%" align="center"><a href="https://www.creativeitinstitute.com/about-us" style="text-decoration:none ;"> <font color="black" ><h3><b>About us</h3></b></font>
             </a> </td>
-            <td width="170px" align="left"><a href="https://www.creativeitinstitute.com/success-story" style="text-decoration: none;"> <font color="black"><h3><b>Success-story Story</h3></b> </font></td>
+            <td width="170px" align="left"><a href="https://www.creativeitinstitute.com/success-story" style="text-decoration: none;"> <font color="black"><h3><b>Success Story</h3></b> </font></td>
                 <td width="125" align="right"><a href="https://www.creativeitinstitute.com/freelancing" style="text-decoration: none;"> <font color="black"><h3><b> Freelancing</h3></b> </font></td>
                     <td align="center"><a href="https://www.creativeitinstitute.com/contact-us" style="text-decoration: none;"> <font color="black"><b><h3> Contact</h3></b> </font></td>
             
