--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <title>CreativeIT website site front page design with HTML</title></head>
 
 <body  bgcolor="#faf0f0"  align="center">
-    
+  <img width="1>" src="./Images/CIT page for thumbnail.png">  
 <table border="0" width="100%" cellspacing="0">
     
     <!-- First Row -->
 <tr bgcolor="#ff635e">
     <td >
         <table width="90%" bgcolor="#ff635e" height="30" align="center">
-            <td width="2.5%"><img width="1>" src="./Images/CIT page for thumbnail.png">
+            <td width="2.5%">
                 <img width="20"  src="Images/call.png"></td><td><font color="white" face="arial"><b></b> 01777308777</b></font></td>
             </td>
             <td width="2.5%"><img width="20" src="Images/top-mail.png"></td><td> <font color="white" face="arial">  help@creativeitinstitute.com</font></td>
