--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
 
-<marquee direction="right" behavior="alternate"> <font size="45" color="Black" face="arial"> Crated by: <b>Anupom Ghose</b><br>
+<marquee direction="right" behavior="alternate"> <font size="45" color="Black" face="arial"> Created by: <b>Anupom Ghose</b><br>
     Instructed by: <b>Md Shourov Sir</b></b> </font>
 </table></body>
 <htmL>
